Fix overflow issues by restricting max-width and hiding horizontal overflow on body and html

--- a/style.css
+++ b/style.css
@@ -7,7 +7,12 @@
 body {
   background-image: url("img/body-bg.jpg");
   background-size: contain;
-  width: 100%;
+  max-width: 100vw;  overflow-x: hidden;
+
+}
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .ripple {
